// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<img
  class="wp-components-image css-ezzd68"
  data-g2-c16t="true"
  data-g2-component="Image"
  src="/olaf.png"
/>
`;

exports[`props should render with custom aspectRatio 1`] = `
<div
  class="wp-components-aspect-ratio css-owceb3"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    class="css-pgjy4"
    data-g2-c16t="true"
    data-g2-component="Image"
    src="/olaf.png"
  />
  <div
    aria-hidden="true"
    class="css-92mxtt"
  />
</div>
`;

exports[`props should render with custom dimensions 1`] = `
<img
  class="wp-components-image css-tr2b2d"
  data-g2-c16t="true"
  data-g2-component="Image"
  height="275"
  src="/olaf.png"
  width="320"
/>
`;

exports[`props should render with custom fit 1`] = `
<div
  class="wp-components-aspect-ratio css-owceb3"
  data-g2-c16t="true"
  data-g2-component="AspectRatio"
>
  <img
    class="css-1yc23su"
    data-g2-c16t="true"
    data-g2-component="Image"
    src="/olaf.png"
  />
  <div
    aria-hidden="true"
    class="css-92mxtt"
  />
</div>
`;
